force-app/main/default/objects/Product2/fields/AVA_SFCLOUD__AvaTax_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__AvaTax_Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alpha-numeric ID created by Avalara to indicate various products for correct calculation.</description>
    <inlineHelpText>Alpha-numeric ID created by Avalara to indicate various products for correct calculation.</inlineHelpText>
    <label>AvaTax Tax Code</label>
    <referenceTo>AVA_SFCLOUD__AvaTax_Tax_Code__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>