force-app/main/default/objects/Product2/fields/BOM_Costs__c.field-meta.xml
<CustomField>
    <fullName>BOM_Costs__c</fullName>
    <formula>rstk__Product_icitem__r.fmg_bom_costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOM Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>