force-app/main/default/objects/Product2/fields/FMG_Product_Image__c.field-meta.xml
<CustomField>
    <fullName>FMG_Product_Image__c</fullName>
    <formula>IMAGE( DisplayUrl , &quot;Product Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>