force-app/main/default/objects/Product2/fields/GSK_Product__c.field-meta.xml
<CustomField>
    <fullName>GSK_Product__c</fullName>
    <formula>IF(ISPICKVAL( Family , &apos;GSK&apos;),TRUE,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSK Product ?</label>
    <type>Checkbox</type>
</CustomField>