force-app/main/default/objects/Product2/fields/Last_Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Paid__c</fullName>
    <formula>rstk__Product_icitem__r.fmg_last_price_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>