force-app/main/default/objects/Product2/fields/Location_external_name__c.field-meta.xml
<CustomField>
    <fullName>Location_external_name__c</fullName>
    <defaultValue>&quot;fmgloc&quot;</defaultValue>
    <label>Location external name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>