force-app/main/default/objects/Product2/fields/Product_Weight__c.field-meta.xml
<CustomField>
    <fullName>Product_Weight__c</fullName>
    <formula>rstk__Product_icitem__r.rstk__icitem_weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>