force-app/main/default/objects/Product2/fields/QOH__c.field-meta.xml
<CustomField>
    <fullName>QOH__c</fullName>
    <description>Quantity On Hand</description>
    <formula>rstk__Product_icitem__r.FMG_On_Hand_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity On Hand</inlineHelpText>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>