force-app/main/default/objects/Product2/fields/RowCount__c.field-meta.xml
<CustomField>
    <fullName>RowCount__c</fullName>
    <label>RowCount</label>
    <type>AutoNumber</type>
</CustomField>