force-app/main/default/objects/Product2/fields/rstk__altextid__c.field-meta.xml
<CustomField>
    <fullName>rstk__altextid__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Not Applicable</inlineHelpText>
    <label>altextid</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>