force-app/main/default/objects/Product2/fields/rstk__Product_configsoprod__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_configsoprod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Rootstock Product associated with the SF Product, where the Rootstock Product Type = Configured.</inlineHelpText>
    <label>Z_Obsolete</label>
    <referenceTo>rstk__soprod__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>configsoprodProducts</relationshipName>
    <type>Lookup</type>
</CustomField>