force-app/main/default/objects/Product2/fields/rstk__Product_entity_type__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_entity_type__c</fullName>
    <label>Rootstock Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Item</fullName>
            </value>
            <value>
                <fullName>BOM Parent Item</fullName>
            </value>
            <value>
                <fullName>Independent Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>