force-app/main/default/objects/Product2/fields/rstk__Product_fromsf__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_fromsf__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Product_fromsf</label>
    <type>Checkbox</type>
</CustomField>