force-app/main/default/objects/Product2/fields/rstk__Product_icitem__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_icitem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Rootstock Inventory Item associated with this Product.</inlineHelpText>
    <label>Inventory Item</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>icitemProducts</relationshipName>
    <type>Lookup</type>
</CustomField>