force-app/main/default/objects/Product2/fields/rstk__Product_invdiv__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_invdiv__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Inventory Division from which this Product will be fulfilled.</inlineHelpText>
    <label>Inventory Division</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>Products (Inventory Division)</relationshipLabel>
    <relationshipName>invdivProudcts</relationshipName>
    <type>Lookup</type>
</CustomField>