force-app/main/default/objects/Product2/fields/rstk__Product_peitem__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_peitem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Parent Item</label>
    <referenceTo>rstk__peitem__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>