force-app/main/default/objects/Product2/fields/rstk__Product_peitemdesc__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_peitemdesc__c</fullName>
    <inlineHelpText>The Rootstock Item Description as defined on the corresponding Engineering Item Master.</inlineHelpText>
    <label>Rootstock Mfg Item Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>