force-app/main/default/objects/Product2/fields/rstk__Product_reficitem__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_reficitem__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, indicates that a Rootstock Inventory Item is referenced for this Product.</inlineHelpText>
    <label>Z_Obsolete</label>
    <type>Checkbox</type>
</CustomField>