force-app/main/default/objects/Product2/fields/rstk__Product_rs_addprod__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rs_addprod__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, a Rootstock Product will be (or has been) added for this SF Product.</inlineHelpText>
    <label>Add to Rootstock Product Catalog</label>
    <type>Checkbox</type>
</CustomField>