force-app/main/default/objects/Product2/fields/rstk__Product_rs_comcod__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rs_comcod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When adding the Product to the Rootstock Product Catalog, this is the Rootstock Product Group associated with it.</inlineHelpText>
    <label>Product Group</label>
    <referenceTo>rstk__socomm__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>