force-app/main/default/objects/Product2/fields/rstk__Product_rs_div__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rs_div__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales Division in Rootstock where this Product is sold.</inlineHelpText>
    <label>Sales Division</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>