force-app/main/default/objects/Product2/fields/rstk__Product_rs_product__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rs_product__c</fullName>
    <inlineHelpText>The Rootstock Product associated with this SF Product.</inlineHelpText>
    <label>Rootstock Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>