force-app/main/default/objects/Product2/fields/rstk__Product_rs_slsuom__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rs_slsuom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales unit of measure that this product will ship as (e.g., EACH, DOZENS, LBS).</inlineHelpText>
    <label>Sales UOM</label>
    <referenceTo>rstk__syuom__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>