force-app/main/default/objects/Product2/fields/rstk__Product_rtindoper__c.field-meta.xml
<CustomField>
    <fullName>rstk__Product_rtindoper__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Independent Operation associated with this SF Product.</inlineHelpText>
    <label>Independent Operation</label>
    <referenceTo>rstk__rtindoper__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>rtindoperProducts</relationshipName>
    <type>Lookup</type>
</CustomField>