force-app/main/default/objects/Product2/validationRules/rstk__Product_Description_Must_Match_Rootstock.validationRule-meta.xml
<ValidationRule>
    <fullName>rstk__Product_Description_Must_Match_Rootstock</fullName>
    <active>false</active>
    <description>Product Description must match Rootstock Mfg Item Description</description>
    <errorConditionFormula>AND(NOT( ISBLANK( rstk__Product_peitemdesc__c ) ), rstk__Product_peitemdesc__c !=  Description )</errorConditionFormula>
    <errorMessage>Product Description must match Rootstock Mfg Item Description</errorMessage>
</ValidationRule>